Overflow of Content and Menu Bar limits fixed

--- a/style/About_Meet.css
+++ b/style/About_Meet.css
@@ -3,10 +3,14 @@
 {
 	
 
-    width: 100%;
+   width: 95%;
   	position: relative;
   	top: 0;
-  	left: 0;
+  	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: auto;
+
 }
 
 .meetp
