--- a/style/main.css
+++ b/style/main.css
@@ -82,7 +82,7 @@ img.sunsetclose{
 
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
 
 	label {
 
